--- a/templates/page.html
+++ b/templates/page.html
@@ -13,6 +13,8 @@
 <h3>How to:</h3>
 <p> URL format: http://127.0.0.1:5000/api/v1/station/date</p>
 <p> URL example: http://127.0.0.1:5000/api/v1/10/19881025</p>
+<p>{{data|safe}}</p>
+
 
 
 <img src="{{url_for('static', filename='pic.png')}}" alt="pic" style="width:500px">
